- thêm cấu hình cors nhưng vẫn chưa sửa dc, như cặc